--- a/miniliga/.env
+++ b/miniliga/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgres://miniliga_database_user:Khul0CArBgKebxooYwGo21EzHlh1E6Dc@dpg-ck25cg821fec73blod6g-a.oregon-postgres.render.com/miniliga_database
+DATABASE_URL=postgres://miniliga_database_y9fo_user:nVfKve4rVY6mzDt7WOteRwe88DlOPipG@dpg-ck2aptnhdsdc739ls0e0-a.frankfurt-postgres.render.com/miniliga_database_y9fo
 SECRET_KEY=django-insecure-4*n^5p1ig-ais9)8eoxn1odnp!gu_vk_8rxts(f45fpwz6wg(v
